--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -4,13 +4,16 @@
 .hLeft p{text-align:center;font-family: 'Tangerine', cursive;font-size:42px;padding-top:5px;text-shadow: 1px 1px #63a2ff;color:#63a2ff;}
 .hCenter{display: block;float: left;width: 50%;height: 50px;background-color:#000000;}
 .hRight{display: block;float: left;width: 25%;height: 50px;background-color:#000000;}
-.hRight i{color: #ffffff;font-size: 25px;float: right;}
-.hNav{display: block;float: left;width: 100%;height: 50px;background-color:#000000;box-shadow: 3px 5px 10px #333;}
+.hRight i{color: #63a2ff;font-size: 25px;float: right;}
+.hNav{display: block;float: left;width: 100%;height: 50px;background-color:#000000;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
-.hNav li > a{text-decoration:none;color:#63a2ff;padding:10px;font-family: 'B Helal';}
-.hNav li:hover .subMenu{display:block;}
+.hNav li > a{text-decoration:none;color:#b5d1ff;padding:10px;font-family: 'B Helal';}
+.hNav li:hover + .subMenu{display:block;}
 .hNav li:hover a{color:#ffffff;}
-.hNav li:hover{border-bottom:2px solid #63a2ff;}
-.subMenu{display:none;width:12.5%;height:auto;position:absolute;top:100px;right:12.5%;border-radius:5px;box-shadow: 0px 5px 10px #333;background-color:#333333;color:#000000;}
-.subMenu a {display:block;text-decoration:none;width:100%;height:30px;padding-top:10px;border-radius:5px;border:1px solid #000000;color:#000000;}
-.subMenu a:hover{text-decoration:underline;color:#444444;}
+/*.hNav li:hover{border-bottom:2px solid #63a2ff;}*/
+.subMenu{display:none;width:12.5%;height:auto;position:absolute;top:100px;right:12.5%;border-radius:5px;box-shadow: 1px 4px 7px #111111;background-color:#333333;color:#000000;}
+.subMenu li{display:block;text-decoration:none;width:100%;height:40px;padding-top:5px;border-top:2px solid #63a2ff;border-radius:5px;font-family: 'B Helal';}
+.subMenu li a{text-decoration:none;color:#ffffff;}
+.subMenu:hover{display:block;}
+.subMenu li a:hover{color:#63a2ff;}
+/*.subMenu li:hover{border:none;}*/
