--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -2,6 +2,6 @@
 .hLeft{display: block;float: left;width: 25%;height: 50px;border:1px solid red;}
 .hCenter{display: block;float: left;width: 50%;height: 50px;border:1px solid red;}
 .hRight{display: block;float: left;width: 24%;height: 50px;border:1px solid red;}
-.hRight i{color: #000000;font-size: 25px;float: right;}
+.hRight i{color: #000000;font-size: 25px;float: right;margin:15px;}
 .hNav{display: block;float: left;width: 100%;height: 50px;border:1px solid blue;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;padding-top:15px;}
