--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -4,7 +4,7 @@
 .hLeft p{text-align:center;font-family: 'Tangerine', cursive;font-size:48px;padding-top:10px;text-shadow: 1px 1px #63a2ff;color:#63a2ff;}
 .hCenter{display: block;float: left;width: 50%;height: 70px;background-color:#000000;}
 .hRight{display: block;float: left;width: 25%;height: 70px;background-color:#000000;}
-.hRight i{color: #63a2ff;font-size: 25px;float: right;margin:15px;}
+.hRight i{color: #63a2ff;font-size: 25px;float: right;margin:15px;margin-right:25px;}
 .hNav{display: block;float: left;width: 100%;height: 50px;background-color:#000000;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
 .hNav li > a{text-decoration:none;color:#b5d1ff;padding:10px;font-family: 'B Helal';}
@@ -18,4 +18,7 @@
 .subMenu li a{text-decoration:none;color:#ffffff;}
 .subMenu:hover{display:block;}
 .subMenu li a:hover{color:#63a2ff;}
-/*.subMenu li:hover{border:none;}*/
+.slideShow{display:block;float:left;width:96%;height:auto;margin-left:2%;margin-top:10px;margin-bottom:10px;}
+.slideShow img{width:100%;height:auto;box-shadow: 1px 4px 7px #111111;}
+section{display:block;float:left;width:100%;height:auto;}
+footer{display:block;float:left;width:100%;height:300px;background-color:#000000;box-shadow: 1px -4px 7px #111111; }
