--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -16,6 +16,12 @@ background-color:#63a2ff;color:#000000;font-family: 'B Helal';}
 /*icons*/
 .hRight{display: block;float: left;width: 25%;height: 70px;}
 .hRight i{color: #63a2ff;font-size: 25px;float: right;margin:15px;margin-right:25px;}
+.fixhRight{z-index:15;position: fixed;float:none;right:0px;top:0px;}
+#searchIcon{display:none;}
+.shopBar{z-index:10;display: none;position:absolute;top:120px;right:0;width:25%;height:100px;background-color: #111111;
+box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;}
+.shopBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
+#closeCart{position:absolute;}
 /*nav Bar*/
 .hNav{display: block;float: left;width: 100%;height: 50px;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
