--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -14,14 +14,18 @@ text-align:right;float:right;width: 81%;height:40px;border-radius: 6px;font-size
 background-color:#63a2ff;color:#000000;font-family: 'B Helal';}
 .hCenter input[type=submit]:hover{border:2px solid black;}
 /*icons*/
-.hRight{display: block;float: left;width: 25%;height: 70px;}
+.hRight{z-index:3;display: block;float: left;width: 25%;height: 70px;}
 .hRight i{color: #63a2ff;font-size: 25px;float: right;margin:15px;margin-right:25px;}
 .fixhRight{z-index:15;position: fixed;float:none;right:0px;top:0px;}
 #searchIcon{display:none;}
-.shopBar{z-index:10;display: none;position:absolute;top:120px;right:0;width:25%;height:100px;background-color: #111111;
-box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;}
+.shopBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 2s top;}
 .shopBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
-#closeCart{position:absolute;}
+.userBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 2s top;}
+.userBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
+#closeCart{position:absolute;right:0;}
+#userIcon{position: absolute;display: block;}
 /*nav Bar*/
 .hNav{display: block;float: left;width: 100%;height: 50px;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
