--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -13,21 +13,35 @@ text-align:right;float:right;width: 81%;height:40px;border-radius: 6px;font-size
 -ms-border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px;border-radius: 4px;font-size: 16px;
 background-color:#63a2ff;color:#000000;font-family: 'B Helal';}
 .hCenter input[type=submit]:hover{border:2px solid black;}
+.fixhCenter{visibility: hidden;width:0;}
+.fixhCenter input[type=search] {margin-top:5px;background-color: #000000;color:#ffffff;box-shadow:inset 0px 2px 7px #ffffff;}
+.fixhCenter input[type=submit] {margin-top:5px;background-color:#000000;color:#63a2ff;}
+.togglehCenter{z-index:15;background-color: #ffffff; visibility: visible;float:none;width:100%;height:50px;position: fixed;top:50px;
+right:0;box-shadow: 1px 5px 7px #111;transition: 0.3s width;opacity:0.9;}
 /*icons*/
 .hRight{z-index:3;display: block;float: left;width: 25%;height: 70px;}
-.hRight i{color: #63a2ff;font-size: 25px;float: right;margin:15px;margin-right:25px;}
+.hRight i{cursor:pointer;color: #63a2ff;font-size: 25px;display:block;float: right;margin:15px;margin-right:25px;}
 .fixhRight{z-index:15;position: fixed;float:none;right:0px;top:0px;}
 #searchIcon{display:none;}
-.shopBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:100px;
-background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 2s top;}
-.fixShopBar{position:fixed;top:50px;}
-.shopBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
-.userBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:100px;
-background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 2s top;}
-.fixUserBar{position:fixed;top:50px;}
-.userBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
+.cartBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:0px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.toggleCartBar{z-index:1;display: block;visibility: visible; position:absolute;top:120px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.fixedCartBar{z-index:1;display: block;visibility: visible; position:fixed;top:50px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.cartBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
+.accountBar{z-index:1;display: block;visibility: hidden; position:absolute;top:120px;right:0;width:25%;height:0px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.toggleAccountBar{z-index:1;display: block;visibility: visible; position:absolute;top:120px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.fixedAccountBar{z-index:1;display: block;visibility: visible; position:fixed;top:50px;right:0;width:25%;height:100px;
+background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6px;transition: 0.3s height;}
+.accountBar p{text-align: center;color:#ffffff;font-size:16px;font-family: 'B Helal';padding-top:30px;}
 #closeCart{position:absolute;right:0;}
 #userIcon{position: absolute;display: block;}
+.searchBar{display:block;visibility:hidden;position: fixed;top:50px;right:0;width:0;height:50px;background-color: #ffffff;}
+.toggleSearchBar{display:block;visibility:visible;position: fixed;top:50px;right:0;width:100%;height:50px;background-color: #ffffff;
+	box-shadow: 1px 5px 7px #111;transition: 0.3s width;}
 /*nav Bar*/
 .hNav{display: block;float: left;width: 100%;height: 50px;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
