--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -3,7 +3,7 @@
 header{display:block;float:left;width:100%;height:auto;background-color: #000000;}
 /*logo*/
 .hLeft{display: block;float: left;width: 25%;height: 70px;}
-.hLeft p{text-align:center;font-family: 'Tangerine', cursive;font-size:48px;padding-top:10px;
+.hLeft p{text-align:center;font-family: 'Tangerine', cursive;font-size:4.5vw;padding-top:10px;
 text-shadow: 1px 1px #63a2ff;color:#63a2ff;}
 /*search bar*/
 .hCenter{display: block;float: left;width: 50%;height: 70px;}
@@ -16,8 +16,8 @@ background-color:#63a2ff;color:#000000;font-family: 'B Helal';}
 .fixhCenter{visibility: hidden;width:0;}
 .fixhCenter input[type=search] {margin-top:5px;background-color: #000000;color:#ffffff;box-shadow:inset 0px 2px 7px #ffffff;}
 .fixhCenter input[type=submit] {margin-top:5px;background-color:#000000;color:#63a2ff;}
-.togglehCenter{z-index:15;background-color: #ffffff; visibility: visible;float:none;width:100%;height:50px;position: fixed;top:50px;
-right:0;box-shadow: 1px 5px 7px #111;transition: 0.3s width;opacity:0.9;}
+.togglehCenter{z-index:15;background-color: #ffffff;display:block; visibility: visible;float:none;width:100%;
+height:50px;position: fixed;top:50px;right:0;box-shadow: 1px 5px 7px #111;transition: 0.3s width;opacity:0.9;}
 /*icons*/
 .hRight{z-index:3;display: block;float: left;width: 25%;height: 70px;}
 .hRight i{cursor:pointer;color: #63a2ff;font-size: 25px;display:block;float: right;margin:15px;margin-right:25px;}
@@ -42,10 +42,11 @@ background-color: #111111;box-shadow: 1px 5px 7px #111;border-radius: 0 0 6px 6p
 .searchBar{display:block;visibility:hidden;position: fixed;top:50px;right:0;width:0;height:50px;background-color: #ffffff;}
 .toggleSearchBar{display:block;visibility:visible;position: fixed;top:50px;right:0;width:100%;height:50px;background-color: #ffffff;
 	box-shadow: 1px 5px 7px #111;transition: 0.3s width;}
+.responsiveMenuIcon{display:none;float:left;width:32%;height:50px;}
 /*nav Bar*/
 .hNav{display: block;float: left;width: 100%;height: 50px;box-shadow: 1px 5px 7px #111;}
 .hNav li{width:12.5%;height:50px;display:block;float: right;text-align: center;}
-.hNav li > a{text-decoration:none;color:#b5d1ff;padding:10px;font-family: 'B Helal';}
+.hNav li > a{text-decoration:none;color:#b5d1ff;padding:10px;font-family: 'B Helal';font-size: 1.2vw;}
 .hNav li:hover + .subMenu{display:block;}
 .hNav li:hover a{color:#ffffff;}
 .subMenu{z-index:20;display:none;width:12.5%;height:auto;position:absolute;top:120px;right:12.5%;border-radius:5px;
@@ -63,8 +64,9 @@ section{display:block;float:left;width:100%;height:auto;}
 -webkit-transition: 0.5s -webkit-filter linear;-o-transition: 0.5s -o-filter linear;}
 .slideBlur{filter:blur(3px);-webkit-transition: 0.5s -webkit-filter linear;-o-transition: 0.5s -o-filter linear;}
 .slideShow img{width:100%;height:auto;box-shadow: 1px 4px 7px #111111;}
-.textSlideShow{z-index:10;display:block;position:absolute;width:400px;height:100px;top:150px;left:35%;}
-.textSlideShow p{color:#000000;text-align:center;font-family: 'Tangerine', cursive;font-weight:bolder;font-size:64px;transition: 1s color;}
+.textSlideShow{z-index:10;display:block;position:absolute;width:30%;height:auto;top:150px;left:35%;}
+.textSlideShow p{color:#000000;text-align:center;font-family: 'Tangerine', cursive;font-weight:bolder;font-size:4.5vw;
+transition: 1s color;}
 .fixNav{position:fixed;width:100%;height:50px;background-color:#000000;top:0px;left:0px;transition: 1s background-color;
 border-radius:0 0 4px 4px;box-shadow: 1px 4px 7px #111111;opacity:0.9;}
 .fixNav p{color:#63a2ff;font-size:48px;padding-top: 5px;transition: 1s all;}
@@ -81,3 +83,27 @@ box-shadow: 1px 4px 7px #111111,-1px -3px 8px #111111;}
 /*footer*/
 footer{margin-top:300px;display:block;float:left;width:100%;height:300px;background-color:#000000;
 box-shadow: 1px -4px 7px #111111; }
+
+@media screen and (max-width: 800px) {
+.hCenter{display:none;}
+.hRight{float:right;width:38%;height:50px;}
+.hLeft{width:24%;height:50px;}
+.hLeft p{font-size: 38px;}
+#searchIcon{display:block;}
+.textSlideShow{top:70px;}
+.fixNav{top:0;}
+.responsiveMenuIcon{display:block;width:38%;}
+.hNav{display:none;}
+.cartBar{top:50px;}
+.toggleCartBar{top:50px;}
+.fixedCartBar{top:50px;}
+.accountBar{top:50px;}
+.toggleAccountBar{top:50px;}
+.fixedAccountBar{top:50px;}
+}
+
+@media screen and (max-width: 540px) {
+.hLeft{width:24%;float:left;}
+.hLeft p{font-size: 32px;}
+.hRight i{font-size: 18px;margin-right:15px;}
+}
