--- a/css/mahifam.css
+++ b/css/mahifam.css
@@ -17,7 +17,7 @@ background-color:#63a2ff;color:#000000;font-family: 'B Helal';}
 .fixhCenter input[type=search] {margin-top:5px;background-color: #000000;color:#ffffff;box-shadow:inset 0px 2px 7px #ffffff;}
 .fixhCenter input[type=submit] {margin-top:5px;background-color:#000000;color:#63a2ff;}
 .togglehCenter{z-index:15;background-color: #ffffff;display:block; visibility: visible;float:none;width:100%;
-height:50px;position: fixed;top:50px;right:0;box-shadow: 1px 5px 7px #111;transition: 0.3s width;opacity:0.9;}
+height:50px;position: fixed;top:50px;right:0;box-shadow: 1px 5px 7px #111;transition: 0.3s width;opacity:0.9;border:1px solid red;}
 /*icons*/
 .hRight{z-index:3;display: block;float: left;width: 25%;height: 70px;}
 .hRight i{cursor:pointer;color: #63a2ff;font-size: 25px;display:block;float: right;margin:15px;margin-right:25px;}
@@ -85,7 +85,10 @@ footer{margin-top:300px;display:block;float:left;width:100%;height:300px;backgro
 box-shadow: 1px -4px 7px #111111; }
 
 @media screen and (max-width: 800px) {
-.hCenter{display:none;}
+.hCenter{z-index:13;display:block;visibility:hidden;position: absolute;width:100%;height:50px;top:50px;right:0;
+background-color: #000000;border:1px solid red;}
+.hCenter input[type=search] {margin-top:5px;background-color: #000000;color:#ffffff;box-shadow:inset 0px 2px 7px #ffffff;}
+.hCenter input[type=submit] {margin-top:5px;background-color:#000000;color:#63a2ff;}
 .hRight{float:right;width:38%;height:50px;}
 .hLeft{width:24%;height:50px;}
 .hLeft p{font-size: 38px;}
